fix missing auth dep

--- a/docker/.gitignore
+++ b/docker/.gitignore
@@ -1,9 +1,11 @@
 /authentik/*
 
+/api_cache/*
 /backend_repo/*
 /celery_cache/*
 /ollama_cache/*
 /ray_cache/*
+/rq_cache/*
 
 /pg_data/*
 /rabbitmq_data/*
