--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -92,8 +92,26 @@ services:
       retries: 5
       start_period: 5s
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-datsuser}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-dats123}
+      POSTGRES_USER: ${POSTGRES_USER:?postgres-user-required!}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?postgres-password-required!}
+      DATS_DB: ${DATS_DB:?dats-db-required!}
+      AIRFLOW_DB: ${AIRFLOW_DB:?airflow-db-required!}
+    volumes:
+      - ./configs/postgres/init-dbs.sh:/docker-entrypoint-initdb.d/init-dbs.sh
+    restart: always
+    networks:
+      - dats_network
+
+  rabbitmq:
+    image: "rabbitmq:3-management-alpine"
+    healthcheck:
+      test: "rabbitmq-diagnostics check_port_connectivity"
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-datsuser}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-dats123}
     networks:
       - dats_network
 
@@ -169,7 +187,7 @@ services:
         soft: 65536
         hard: 65536
     volumes:
-      - ./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      - ./configs/es/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       - ../backups/elasticsearch:/mount/backups
     networks:
       - dats_network
@@ -305,7 +323,7 @@ services:
     command: ["/opt/airflow-init.sh"]
     volumes:
       - *airflow-common-volumes
-      - ./airflow-init.sh:/opt/airflow-init.sh:ro
+      - ./configs/airflow/airflow-init.sh:/opt/airflow-init.sh:ro
     environment:
       <<: *airflow-common-env
       _AIRFLOW_DB_MIGRATE: "true"
@@ -370,8 +388,8 @@ services:
       timeout: 10s
       retries: 5
     volumes:
-      - ./logo.png:/usr/share/nginx/html/logo2.png
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./configs/frontend/logo.png:/usr/share/nginx/html/logo2.png
+      - ./configs/frontend/nginx.conf:/etc/nginx/nginx.conf
       - ./backend_repo:/usr/share/nginx/content:ro
     depends_on:
       dats-backend-api:
