--- a/airflow/.vscode/settings.json
+++ b/airflow/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   // python
-  "python.autoComplete.extraPaths": ["${workspaceFolder}/src", "../backend/src"],
+  "python.autoComplete.extraPaths": ["${workspaceFolder}/src", "${workspaceFolder}/../backend/src"],
   "python.analysis.diagnosticMode": "workspace",
-  "python.analysis.extraPaths": ["${workspaceFolder}/src", "../backend/src"],
+  "python.analysis.extraPaths": ["${workspaceFolder}/src", "${workspaceFolder}/../backend/src"],
   "python.analysis.autoFormatStrings": true,
   "python.analysis.typeCheckingMode": "basic",
   "python.analysis.pyrightVersion": "1.1.385", // this has to match pyproject.toml
