--- a/airflow/pyproject.toml
+++ b/airflow/pyproject.toml
@@ -42,9 +42,8 @@ extend-select = ["I", "W292", "W291", "W293"]
 [tool.pyright]
 include = ["src"]
 exclude = ["**/__pycache__",
-    "src/dev_notebooks",
 ]
-extraPaths = ["src"]
+extraPaths = ["src", "../backend/src"]
 reportIncompatibleMethodOverride = false
 reportIncompatibleVariableOverride = false
 reportUnreachable = true
