--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,13 +10,17 @@ repos:
       - id: trailing-whitespace
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
+    name: "Ruff (backend)"
     rev: v0.12.5
     hooks:
       # Run the linter.
       - id: ruff
         args: [--fix, --config=backend/pyproject.toml]
+        working-directory: backend
       # Run the formatter.
       - id: ruff-format
+        args: [--config=backend/pyproject.toml]
+        working-directory: backend
   - repo: local
     hooks:
       - id: pyright-backend
@@ -37,7 +41,12 @@ repos:
       - id: eslint
         files: \.[jt]sx?$ # *.js, *.jsx, *.ts and *.tsx
         types: [file]
-        args: [--max-warnings=0, --config=frontend/eslint.config.mjs, --no-warn-ignored]
+        args:
+          [
+            --max-warnings=0,
+            --config=frontend/eslint.config.mjs,
+            --no-warn-ignored,
+          ]
         additional_dependencies:
           - "@tanstack/eslint-plugin-query@5.59.2"
           - eslint@9.22.0
