optmized job multiprocessing

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -99,6 +99,11 @@ POSTGRES_USER=datsuser
 POSTGRES_PASSWORD=dats123
 
 
+### RQ settings
+RQ_NUM_RQ_WORKER_CPU=8
+RQ_NUM_RQ_WORKER_CPU=16
+
+
 ### RQ Dashboard settings
 RQ_DASHBOARD_USERNAME=datsuser
 RQ_DASHBOARD_PASSWORD=dats123
