--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -170,7 +170,8 @@ services:
     command: /dats_code/src/rq_worker_entrypoint.sh
     user: ${DOCKER_UID:-1000}:${DOCKER_GID:-1000}
     environment:
-      NUM_RQ_WORKER: 16
+      NUM_RQ_WORKER_CPU: ${RQ_NUM_RQ_WORKER_CPU:-8}
+      NUM_RQ_WORKER_GPU: ${RQ_NUM_RQ_WORKER_GPU:-16}
       DATS_BACKEND_MODE: production
       LOG_LEVEL: ${RQ_LOG_LEVEL:-info}
       UUID_NAMESPACE: ${UUID_NAMESPACE:?uuid namespace required}
@@ -290,9 +291,6 @@ services:
         condition: service_healthy
         restart: true
       elasticsearch:
-        condition: service_healthy
-        restart: true
-      celery-background-jobs-worker:
         condition: service_healthy
         restart: true
       rq-worker:
