--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
     "airflow": true,
     "backend": true,
     "frontend": true
-  }
+  },
+  // prettier
+  "prettier.prettierPath": "frontend/node_modules/prettier",
+  "prettier.configPath": ".prettierrc.yaml",
+  // ruff
+  "ruff.interpreter": ["${workspaceFolder:backend}/.venv/bin/python"]
 }
