--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -1,21 +1,26 @@
 {
   // python
-  "python.envFile": "${workspaceFolder}/.env",
-  "python.autoComplete.extraPaths": ["${workspaceFolder}/src"],
+  "python.defaultInterpreterPath": "${workspaceFolder:backend}/.venv/bin/python",
+  "python.envFile": "${workspaceFolder:backend}/.env",
+  "python.autoComplete.extraPaths": ["${workspaceFolder:backend}/src"],
   "python.analysis.diagnosticMode": "workspace",
-  "python.analysis.extraPaths": ["${workspaceFolder}/src"],
+  "python.analysis.extraPaths": ["${workspaceFolder:backend}/src"],
   "python.analysis.autoFormatStrings": true,
   "python.analysis.typeCheckingMode": "basic",
   "python.analysis.pyrightVersion": "1.1.385", // this has to match pyproject.toml
-  "python.analysis.exclude": ["**/node_modules", "**/__pycache__", ".git", "**/.venv", "**/docker"],
+  "python.analysis.exclude": ["**/__pycache__", "**/.venv"],
 
   // pytest
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "python.testing.cwd": "${workspaceFolder}/backend",
+  "python.testing.cwd": "${workspaceFolder:backend}",
   "python.testing.pytestArgs": ["-c", "pyproject.toml"],
   "python.testing.autoTestDiscoverOnSaveEnabled": false,
 
-  // ruff (python linter)
-  "ruff.configuration": "./pyproject.toml"
+  // prettier
+  "prettier.prettierPath": "../frontend/node_modules/prettier",
+  "prettier.configPath": "../.prettierrc.yaml",
+
+  // ruff
+  "ruff.interpreter": ["${workspaceFolder:backend}/.venv/bin/python"]
 }
