--- a/airflow/pyproject.toml
+++ b/airflow/pyproject.toml
@@ -32,6 +32,9 @@ Issues = "https://github.com/uhh-lt/dats/issues"
 extend = "../ruff.toml"
 src = ["src"]
 
+[tool.ruff.lint.isort]
+known-first-party = ["src"]
+
 [tool.pyright]
 include = ["src"]
 exclude = ["**/__pycache__"]
