do not run any python analysis from project root

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,8 @@
   "prettier.configPath": ".prettierrc.yaml",
 
   // ruff
-  "ruff.interpreter": ["${workspaceFolder:backend}/.venv/bin/python"]
+  "ruff.interpreter": ["${workspaceFolder:backend}/.venv/bin/python"],
+
+  // python
+  "python.analysis.exclude": ["*"]
 }
