--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -123,15 +123,22 @@ Repository = "https://github.com/uhh-lt/dats.git"
 Issues = "https://github.com/uhh-lt/dats/issues"
 
 [tool.ruff]
+extend = "../ruff.toml"
 src = ["src"]
 
-[tool.ruff.lint]
-
-# I: isort-compatible import sorting
-# W291: Trailing whitespace
-# W292: Add newline to end of file
-# W293: Blank line contains whitespace
-extend-select = ["I", "W292", "W291", "W293"]
+[tool.ruff.lint.isort]
+known-first-party = [
+    "common",
+    "core",
+    "config",
+    "migrations",
+    "modules",
+    "preprocessing",
+    "ray_model_worker",
+    "repos",
+    "systems",
+    "utils"
+]
 
 [tool.pyright]
 include = ["src"]
