--- a/docker/.env.example
+++ b/docker/.env.example
@@ -7,9 +7,9 @@
 COMPOSE_PROJECT_NAME=demo
 # remove profiles to disable containers
 # dependencies are as follows:
-# weaviate < rq < backend < frontend
+# rq < backend < frontend
 # you can remove profiles from right to left
-COMPOSE_PROFILES=weaviate,background,rq,backend,frontend
+COMPOSE_PROFILES=rq,backend,frontend
 # Docker tag to use for pulling the backend and rq container
 DATS_BACKEND_DOCKER_VERSION=1.7.1
 # Docker tag to use for pulling the ray container
@@ -89,8 +89,10 @@ POSTGRES_PASSWORD=dats123
 
 
 ### RQ settings
-RQ_NUM_RQ_WORKER_CPU=8
-RQ_NUM_RQ_WORKER_CPU=16
+# LOG LEVEL ('critical', 'error', 'warning', 'info', 'debug', 'trace')
+RQ_LOG_LEVEL=info
+RQ_WORKERS_CPU=8
+RQ_WORKERS_GPU=16
 
 
 ### RQ Dashboard settings
@@ -100,6 +102,8 @@ RQ_DASHBOARD_EXPOSED=13136
 
 
 ### Ray settings (compose.ray.yaml)
+# LOG LEVEL ('critical', 'error', 'warning', 'info', 'debug', 'trace')
+RAY_LOG_LEVEL=info
 # Choose either config_cpu.yaml or config_gpu.yaml
 RAY_CONFIG=config_gpu.yaml
 RAY_API_EXPOSED=13130
