--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,16 +14,20 @@ repos:
     hooks:
       # Run the linter.
       - id: ruff
+        name: "Ruff (backend)"
         args: [--fix, --config=backend/pyproject.toml]
+        files: ^backend/.*\.py$
       # Run the formatter.
       - id: ruff-format
+        name: "Ruff Format (backend)"
+        files: ^backend/.*\.py$
   - repo: local
     hooks:
-      - id: pyright
-        name: "Pyright"
+      - id: pyright-backend
+        name: "Pyright (backend)"
         entry: bash -c 'source backend/.venv/bin/activate && pyright --project backend "$@"' --
         language: system
-        files: \.py$
+        files: ^backend/.*\.py$
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v9.22.0
     hooks:
@@ -41,10 +45,10 @@ repos:
     rev: "v4.0.0-alpha.8"
     hooks:
       - id: prettier
-        files: \.([jt]sx?|json)$ # *.js, *.jsx, *.ts, *.tsx, *.json
+        files: \.([jt]sx?|json|ya?ml)$ # *.js, *.jsx, *.ts, *.tsx, *.json, *.yml, *.yaml
         args: [
-            --print-width,
-            "120",
+            "--config",
+            ".prettierrc.yaml",
             # Without this, prettier will create a `node_modules` folder in the repository root
             "--cache-location",
             "frontend/node_modules/.cache/prettier",
