--- a/docker/compose.override.yml
+++ b/docker/compose.override.yml
@@ -3,26 +3,26 @@ services:
     volumes:
       - "postgres_data:/var/lib/postgresql/data"
     ports:
-      - "${POSTGRES_EXPOSED:-13122}:5432"
+      - "${POSTGRES_EXPOSED?postgres-exposed-required!}:5432"
 
   redis:
     volumes:
       - "redis_data:/var/lib/redis/data"
     ports:
-      - "${REDIS_EXPOSED:-13124}:6379"
+      - "${REDIS_EXPOSED?redis-exposed-required!}:6379"
 
   weaviate:
     volumes:
       - "weaviate_data:/var/lib/weaviate"
     ports:
-      - "${WEAVIATE_EXPOSED:-13132}:8080"
-      - "${WEAVIATE_GRPC_EXPOSED:-13134}:50051"
+      - "${WEAVIATE_EXPOSED?weaviate-exposed-required!}:8080"
+      - "${WEAVIATE_GRPC_EXPOSED?weaviate-grpc-exposed-required!}:50051"
 
   weaviateapp:
     # https://github.com/Shah91n/WeaviateCluster
     image: weaviateclusterapp:latest
     ports:
-      - "${WEAVIATEAPP_EXPOSED:-13135}:8501"
+      - "${WEAVIATEAPP_EXPOSED?weaviateapp-exposed-required!}:8501"
     extra_hosts:
       - "localhost:host-gateway"
     profiles:
@@ -32,7 +32,7 @@ services:
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
     ports:
-      - "${ELASTICSEARCH_EXPOSED:-13125}:9200"
+      - "${ELASTICSEARCH_EXPOSED?elasticsearch-exposed-required!}:9200"
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.11.1
@@ -40,7 +40,7 @@ services:
       ELASTICSEARCH_URL: http://elasticsearch:9200
       ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
     ports:
-      - "${KIBANA_EXPOSED:-13126}:5601"
+      - "${KIBANA_EXPOSED?kibana-exposed-required!}:5601"
     networks:
       - dats_network
     depends_on:
@@ -54,7 +54,7 @@ services:
       - ./backend_repo:/var/www/localhost/htdocs
     tty: true
     ports:
-      - "${CONTENT_SERVER_EXPOSED:-13121}:80"
+      - "${CONTENT_SERVER_EXPOSED?content-server-exposed-required!}:80"
     networks:
       - dats_network
 
