--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -1,27 +1,84 @@
+x-dats-common: &dats-common
+  image: uhhlt/dats_backend:${DATS_BACKEND_DOCKER_VERSION:?dats-backend-docker-version-required!}
+  build:
+    context: ../backend
+    dockerfile: Dockerfile
+  user: ${DOCKER_UID?docker-uid-required!}:${DOCKER_GID?docker-gid-required!}
+  environment: &dats-common-env
+    DATS_BACKEND_MODE: production
+    JWT_SECRET: ${JWT_SECRET:?jwt-secret-required!}
+    SESSION_SECRET: ${SESSION_SECRET:?session-secret-required!}
+    UUID_NAMESPACE: ${UUID_NAMESPACE:?uuid-namespace-required!}
+    SYSTEM_USER_EMAIL: ${SYSTEM_USER_EMAIL}
+    SYSTEM_USER_PASSWORD: ${SYSTEM_USER_PASSWORD}
+    POSTGRES_DB: ${POSTGRES_DB?postgres-db-required!}
+    POSTGRES_USER: ${POSTGRES_USER?postgres-user-required!}
+    POSTGRES_PASSWORD: ${POSTGRES_PASSWORD?postgres-password-required!}
+    REDIS_PASSWORD: ${REDIS_PASSWORD?redis-password-required!}
+    OLLAMA_HOST: ${OLLAMA_HOST?ollama-host-required!}
+    OLLAMA_PORT: ${OLLAMA_PORT?ollama-port-required!}
+    OLLAMA_LLM_MODEL: ${OLLAMA_LLM_MODEL?ollama-llm-model-required!}
+    OLLAMA_VLM_MODEL: ${OLLAMA_VLM_MODEL?ollama-vlm-model-required!}
+    OLLAMA_EMB_MODEL: ${OLLAMA_EMB_MODEL?ollama-emb-model-required!}
+    RAY_HOST: ${RAY_HOST?ray-host-required!}
+    RAY_PORT: ${RAY_PORT?ray-port-required!}
+    OIDC_ENABLED: ${OIDC_ENABLED?oidc-enabled-required!}
+    OIDC_PROVIDER_NAME: ${OIDC_PROVIDER_NAME?oidc-provider-name-required!}
+    OIDC_CLIENT_ID: ${OIDC_CLIENT_ID?oidc-client-id-required!}
+    OIDC_CLIENT_SECRET: ${OIDC_CLIENT_SECRET?oidc-client-secret-required!}
+    OIDC_SERVER_METADATA_URL: ${OIDC_SERVER_METADATA_URL?oidc-server-metadata-url-required!}
+    IS_STABLE: ${IS_STABLE?is-stable-required!}
+    NUMBA_CACHE_DIR: /cache/numba_cache
+    MPLCONFIGDIR: /cache/matplotlib
+  depends_on: &dats-common-depends-on
+    postgres:
+      condition: service_healthy
+      restart: true
+    rabbitmq:
+      condition: service_healthy
+      restart: true
+    redis:
+      condition: service_healthy
+      restart: true
+    weaviate:
+      condition: service_healthy
+      restart: true
+    elasticsearch:
+      condition: service_healthy
+      restart: true
+  networks:
+    - dats_network
+    - ollama_network
+    - ray_network
+
 services:
   postgres:
-    image: "postgres:15-alpine"
+    image: postgres:15-alpine
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-datsuser}"]
-      interval: 30s
-      timeout: 10s
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER:?postgres-user-required!}"]
+      interval: 10s
       retries: 5
+      start_period: 5s
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-datsuser}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-dats123}
+      POSTGRES_USER: ${POSTGRES_USER:?postgres-user-required!}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?postgres-password-required!}
+      POSTGRES_DB: ${POSTGRES_DB:?postgres-db-required!}
+    restart: always
     networks:
       - dats_network
 
   redis:
-    image: "redis:7-alpine"
+    image: redis:7-alpine
     healthcheck:
-      test: ["CMD-SHELL", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 30s
+      retries: 50
+      start_period: 30s
     environment:
-      REDIS_PASSWORD: ${REDIS_PASSWORD:-dats123}
-    command: redis-server --requirepass "${REDIS_PASSWORD:-dats123}" --save 60 1
+      REDIS_PASSWORD: ${REDIS_PASSWORD:?redis-password-required!}
+    command: redis-server --requirepass "${REDIS_PASSWORD:?redis-password-required!}" --save 60 1
+    restart: always
     networks:
       - dats_network
 
@@ -53,12 +110,10 @@ services:
       BACKUP_FILESYSTEM_PATH: "/mount/backups"
     networks:
       - dats_network
-    profiles:
-      - weaviate
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
-    user: ${DOCKER_UID:-1000}:${DOCKER_GID:-1000}
+    user: ${DOCKER_UID?docker-uid-required!}:${DOCKER_GID?docker-gid-required!}
     group_add:
       - "0"
     healthcheck:
@@ -82,86 +137,49 @@ services:
         soft: 65536
         hard: 65536
     volumes:
-      - ./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      - ./configs/es/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       - ../backups/elasticsearch:/mount/backups
     networks:
       - dats_network
 
   rq-worker:
-    image: uhhlt/dats_backend:${DATS_BACKEND_DOCKER_VERSION:-debian_dev_latest}
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    <<: *dats-common
     healthcheck:
       test: "/dats_code/.venv/bin/python /dats_code/src/worker.py healthcheck"
       interval: 30s
       timeout: 10s
       retries: 5
     command: /dats_code/src/rq_worker_entrypoint.sh
-    user: ${DOCKER_UID:-1000}:${DOCKER_GID:-1000}
     environment:
-      NUM_RQ_WORKER_CPU: ${RQ_NUM_RQ_WORKER_CPU:-8}
-      NUM_RQ_WORKER_GPU: ${RQ_NUM_RQ_WORKER_GPU:-16}
-      DATS_BACKEND_MODE: production
-      LOG_LEVEL: ${RQ_LOG_LEVEL:-info}
-      UUID_NAMESPACE: ${UUID_NAMESPACE:?uuid namespace required}
-      POSTGRES_DB: ${POSTGRES_DB:-dats}
-      POSTGRES_USER: ${POSTGRES_USER:-datsuser}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-dats123}
-      REDIS_PASSWORD: ${REDIS_PASSWORD:-dats123}
-      OLLAMA_HOST: ${OLLAMA_HOST:-ollama}
-      OLLAMA_PORT: ${OLLAMA_PORT:-11434}
-      OLLAMA_LLM_MODEL: ${OLLAMA_LLM_MODEL:-gemma3:27b}
-      OLLAMA_VLM_MODEL: ${OLLAMA_VLM_MODEL:-gemma3:27b}
-      OLLAMA_EMB_MODEL: ${OLLAMA_EMB_MODEL:-snowflake-arctic-embed2:568m}
-      RAY_HOST: ${RAY_HOST:-ray}
-      RAY_PORT: ${RAY_PORT:-8000}
-      NUMBA_CACHE_DIR: /rq_cache/numba_cache
+      <<: *dats-common-env
+      RQ_WORKERS_CPU: ${RQ_WORKERS_CPU?rq-workers-cpu-required!}
+      RQ_WORKERS_GPU: ${RQ_WORKERS_GPU?rq-workers-gpu-required!}
+      LOG_LEVEL: ${RQ_LOG_LEVEL?rq-log-level-required!}
     volumes:
       - ./backend_repo:/tmp/dats
-      - ./rq_cache:/rq_cache
-    depends_on:
-      postgres:
-        condition: service_healthy
-        restart: true
-      redis:
-        condition: service_healthy
-        restart: true
-      weaviate:
-        condition: service_healthy
-        restart: true
-      elasticsearch:
-        condition: service_healthy
-        restart: true
-    networks:
-      - dats_network
-      - ollama_network
-      - ray_network
+      - ./rq_cache:/cache
     profiles:
       - rq
 
   rq-dashboard:
     image: cjlapao/rq-dashboard:0.8.4
     environment:
-      RQ_DASHBOARD_REDIS_URL: redis://:${REDIS_PASSWORD:-dats123}@redis:6379/10
-      RQ_DASHBOARD_USERNAME: ${RQ_DASHBOARD_USERNAME:-datsuser}
-      RQ_DASHBOARD_PASSWORD: ${RQ_DASHBOARD_PASSWORD:-dats123}
+      RQ_DASHBOARD_REDIS_URL: redis://:${REDIS_PASSWORD:?redis-password-required!}@redis:6379/10
+      RQ_DASHBOARD_USERNAME: ${RQ_DASHBOARD_USERNAME?rq-dashboard-username-required!}
+      RQ_DASHBOARD_PASSWORD: ${RQ_DASHBOARD_PASSWORD?rq-dashboard-password-required!}
     depends_on:
       rq-worker:
         condition: service_healthy
         restart: true
     ports:
-      - "${RQ_DASHBOARD_EXPOSED:-13136}:9181"
+      - "${RQ_DASHBOARD_EXPOSED?rq-dashboard-exposed-required!}:9181"
     networks:
       - dats_network
     profiles:
       - rq
 
   dats-backend-api:
-    image: uhhlt/dats_backend:${DATS_BACKEND_DOCKER_VERSION:-debian_dev_latest}
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    <<: *dats-common
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:5500 || exit 1"]
       start_period: 60s
@@ -169,64 +187,25 @@ services:
       timeout: 10s
       retries: 5
     command: /dats_code/src/backend_api_entrypoint.sh
-    user: ${DOCKER_UID:-1000}:${DOCKER_GID:-1000}
     environment:
-      DATS_BACKEND_MODE: production
-      LOG_LEVEL: ${API_LOG_LEVEL:-info}
-      API_WORKERS: ${API_WORKERS:-10}
-      JWT_SECRET: ${JWT_SECRET:?jwt secret required}
-      SESSION_SECRET: ${SESSION_SECRET:?session secret required}
-      UUID_NAMESPACE: ${UUID_NAMESPACE:?uuid namespace required}
-      SYSTEM_USER_EMAIL: ${SYSTEM_USER_EMAIL}
-      SYSTEM_USER_PASSWORD: ${SYSTEM_USER_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB:-dats}
-      POSTGRES_USER: ${POSTGRES_USER:-datsuser}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-dats123}
-      REDIS_PASSWORD: ${REDIS_PASSWORD:-dats123}
-      OLLAMA_HOST: ${OLLAMA_HOST:-ollama}
-      OLLAMA_PORT: ${OLLAMA_PORT:-11434}
-      OLLAMA_LLM_MODEL: ${OLLAMA_LLM_MODEL:-gemma3:27b}
-      OLLAMA_VLM_MODEL: ${OLLAMA_VLM_MODEL:-gemma3:27b}
-      OLLAMA_EMB_MODEL: ${OLLAMA_EMB_MODEL:-snowflake-arctic-embed2:568m}
-      RAY_HOST: ${RAY_HOST:-ray}
-      RAY_PORT: ${RAY_PORT:-8000}
-      OIDC_ENABLED: ${OIDC_ENABLED:-false}
-      OIDC_PROVIDER_NAME: ${OIDC_PROVIDER_NAME:-Authentik}
-      OIDC_CLIENT_ID: ${OIDC_CLIENT_ID}
-      OIDC_CLIENT_SECRET: ${OIDC_CLIENT_SECRET}
-      OIDC_SERVER_METADATA_URL: ${OIDC_SERVER_METADATA_URL}
-      IS_STABLE: ${IS_STABLE:-false}
-      NUMBA_CACHE_DIR: /api_cache/numba_cache
+      <<: *dats-common-env
+      API_WORKERS: ${API_WORKERS?api-workers-required!}
+      LOG_LEVEL: ${API_LOG_LEVEL?api-log-level-required!}
     volumes:
       - ./backend_repo:/tmp/dats
-      - ./api_cache:/api_cache
+      - ./api_cache:/cache
     depends_on:
-      postgres:
-        condition: service_healthy
-        restart: true
-      redis:
-        condition: service_healthy
-        restart: true
-      weaviate:
-        condition: service_healthy
-        restart: true
-      elasticsearch:
-        condition: service_healthy
-        restart: true
+      <<: *dats-common-depends-on
       rq-worker:
         condition: service_healthy
         restart: true
     ports:
-      - "${API_EXPOSED:-13120}:5500"
-    networks:
-      - dats_network
-      - ollama_network
-      - ray_network
+      - "${API_EXPOSED?api-exposed-required!}:5500"
     profiles:
       - backend
 
   dats-frontend:
-    image: uhhlt/dats_frontend:${DATS_FRONTEND_DOCKER_VERSION:-latest}
+    image: uhhlt/dats_frontend:${DATS_FRONTEND_DOCKER_VERSION?dats-frontend-docker-version-required!}
     build:
       context: ../frontend
       dockerfile: Dockerfile
@@ -236,15 +215,15 @@ services:
       timeout: 10s
       retries: 5
     volumes:
-      - ./logo.png:/usr/share/nginx/html/logo2.png
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./configs/frontend/logo2.png:/usr/share/nginx/html/logo2.png
+      - ./configs/frontend/nginx.conf:/etc/nginx/nginx.conf
       - ./backend_repo:/usr/share/nginx/content:ro
     depends_on:
       dats-backend-api:
         condition: service_healthy
         restart: true
     ports:
-      - "${FRONTEND_EXPOSED:-13100}:3000"
+      - "${FRONTEND_EXPOSED?frontend-exposed-required!}:3000"
     networks:
       - dats_network
     profiles:
