replace Ollama with VLLM

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -74,7 +74,12 @@ WEAVIATE_GRPC_PORT=13134
 RAY_HOST=localhost
 RAY_PORT=13130
 
-OLLAMA_HOST=localhost
-OLLAMA_PORT=13133
-OLLAMA_LLM_MODEL=gemma3:27b
-OLLAMA_VLM_MODEL=gemma3:27b
+VLLM_LLM_MODEL=gemma-3-27b
+VLLM_LLM_HOST=localhost
+VLLM_LLM_PORT=13133
+VLLM_VLM_HOST=localhost
+VLLM_VLM_PORT=13133
+VLLM_VLM_MODEL=gemma-3-27b
+VLLM_EMB_HOST=localhost
+VLLM_EMB_PORT=13137
+VLLM_EMB_MODEL=snowflake-arctic-embed-l-v2.0
