--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -40,8 +40,8 @@ dependencies = [
     "matplotlib==3.7.1",
     "multiprocess==0.70.15",
     "networkx==3.2.1",
-    "ollama==0.4.7",
     "omegaconf==2.3.0",
+    "openai>=1.101.0",
     "pandas==2.1.4",
     "passlib==1.7",
     "pillow==10.0.0",
