--- a/docker/.env.example
+++ b/docker/.env.example
@@ -67,12 +67,17 @@ OIDC_SERVER_METADATA_URL=http://my-auth-server/application/o/dats/.well-known/op
 
 
 ### Backend & RQ settings
-## Ollama connection
-OLLAMA_HOST=ollama
-OLLAMA_PORT=11434
-OLLAMA_LLM_MODEL=gemma3:27b
-OLLAMA_VLM_MODEL=gemma3:27b
-OLLAMA_EMB_MODEL=snowflake-arctic-embed2:568m
+## VLLM connection
+VLLM_LLM_HOST=vllm-llm
+VLLM_LLM_PORT=8000
+VLLM_LLM_MODEL=gemma-3-27b
+VLLM_VLM_HOST=vllm-llm
+VLLM_VLM_PORT=8000
+VLLM_VLM_MODEL=gemma-3-27b
+VLLM_EMB_HOST=vllm-emb
+VLLM_EMB_PORT=8000
+VLLM_EMB_MODEL=snowflake-arctic-embed-l-v2.0
+
 ## Ray connection
 RAY_HOST=ray
 RAY_PORT=8000
@@ -111,10 +116,12 @@ RAY_DASHBOARD_EXPOSED=13131
 RAY_DEVICE_IDS=0
 
 
-### Ollama settings (compose.ollama.yml)
-OLLAMA_EXPOSED=13133
-# For multiple devices, use a comma-separated list, e.g 0,2
-OLLAMA_DEVICE_IDS=1
+### VLLM settings (compose.vllm.yml)
+VLLM_LLM_EXPOSED=13133
+VLLM_LLM_DEVICE_ID=1
+VLLM_EMB_EXPOSED=13137
+VLLM_EMB_DEVICE_ID=1
+HUGGING_FACE_HUB_TOKEN=replace-me-with-your-own-token
 
 
 ### Authentik settings (compose.authentik.yml)
