added max connections env variable

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -91,6 +91,7 @@ REDIS_PASSWORD=dats123
 POSTGRES_DB=dats
 POSTGRES_USER=datsuser
 POSTGRES_PASSWORD=dats123
+POSTGRES_MAX_CONNECTIONS=200
 
 
 ### RQ settings
