--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -64,6 +64,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:?postgres-user-required!}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?postgres-password-required!}
       POSTGRES_DB: ${POSTGRES_DB:?postgres-db-required!}
+    command: ["postgres", "-c", "max_connections=${POSTGRES_MAX_CONNECTIONS:?postgres-max-connections-required!}"]
     restart: always
     networks:
       - dats_network
