moved/added dependencies for new rq-gpu-worker

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,9 +22,11 @@ dependencies = [
     "black==23.9.1",
     "blinker==1.9.0",
     "cssselect==1.2.0",
+    "datasets==3.5.0",
     "debugpy==1.8.0",
     "elasticsearch==7.17",
     "email-validator==2.2.0",
+    "evaluate==0.4.5",
     "fastapi==0.115.12",
     "fastapi-mail==1.4.1",
     "ffmpeg-python==0.2.0",
@@ -32,8 +34,10 @@ dependencies = [
     "ftfy==6.1",
     "hdbscan==0.8.40",
     "httpx==0.28.1",
+    "huggingface-hub==0.29.3",
     "isort==5.12.0",
     "itsdangerous==2.2.0",
+    "lightning==2.5.1",
     "loguru==0.6",
     "lxml-html-clean>=0.4.1",
     "mammoth==1.6.0",
@@ -57,6 +61,7 @@ dependencies = [
     "python-jose==3.3",
     "python-magic==0.4.27",
     "python-multipart==0.0.20",
+    "pytorch-crf==0.7.2",
     "readability-lxml==0.8.1",
     "redis==4.3",
     "rope==1.9.0",
@@ -65,12 +70,17 @@ dependencies = [
     "scrapy==2.10.0",
     "scrapy-playwright==0.0.31",
     "scrapy-selenium==0.0.7",
+    "sentence-transformers==4.1.0",
     "seqeval>=1.2.2",
     "sqlalchemy==2.0.25",
     "sqlalchemy-utils==0.41.1",
     "srsly==2.4.8",
     "starlette==0.46.1",
     "tenacity==9.1.2",
+    "torch==2.6.0",
+    "torchaudio==2.6.0",
+    "torchvision==0.21.0",
+    "transformers==4.49.0",
     "tqdm==4.66.3",
     "twisted==22.10.0",
     "ujson>=5.10.0",
@@ -87,33 +97,23 @@ dev = [
     "bitsandbytes==0.45.4",
     "ctranslate2==4.5.0",
     "cupy-cuda11x==13.4.1",
-    "datasets==3.5.0",
     "docling==2.36.1",
     "faster-whisper==1.1.1",
     "fasttext==0.9.3",
     "ffmpeg-python==0.2.0",
-    "huggingface-hub==0.29.3",
     "ipykernel==6.29.5",
     "ipywidgets>=8.1.7",
-    "lightning==2.5.1",
     "maverick-coref-de==1.0.5",
-    "omegaconf==2.3.0",
     "online-triplet-loss==0.0.6",
     "peft==0.15.1",
     "python-multipart==0.0.20",
-    "pytorch-crf==0.7.2",
     "quotect==1.1.5",
     "ray==2.44.1",
-    "sentence-transformers==4.1.0",
     "setfit==1.1.2",
     "spacy==3.8.4",
     "spacy-curated-transformers==0.3.0",
     "spacy-transformers==1.3.9",
     "timm==1.0.15",
-    "torch==2.6.0",
-    "torchaudio==2.6.0",
-    "torchvision==0.21.0",
-    "transformers==4.49.0",
     "umap-learn==0.5.5",
 ]
 
